--- a/style.css
+++ b/style.css
@@ -8,10 +8,21 @@
 }
 body {
     margin: 0px;
+    font-family: "roboto",sans-serif;
 }
 header {
  font-family: 'Shrikhand', cursive;
  text-align: center;
- box-shadow: 0px 3px 3px 1px rgb(197, 197, 197);
+ box-shadow: 0px 3px 3px 1px rgb(199, 198, 198);
  padding: 0.5rem;
+ position: relative;
+}
+main .ville {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.4rem;
+   background-color: #f3f3f3; 
+   text-align: center;
+   padding: 0.5rem;
 }
