--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
  padding: 0.5rem;
  position: relative;
 }
-main .ville {
+main .ville  {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,4 +25,35 @@ main .ville {
    background-color: #f3f3f3; 
    text-align: center;
    padding: 0.5rem;
+}
+main .ville i {
+    font-size: 1.5rem;
+}
+/*EXPLORER NOS RESTAURANTS*/
+.explorer {
+text-align: center;
+}
+.explorer h2 {
+    margin-top: 2rem;
+    font-size: 2rem;
+}
+.explorer p {
+    font-size: 1rem;
+
+}
+.explorer button {
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+    box-shadow: 2px 1px 16px 3px grey;
+    background-image: linear-gradient(to top, rgba(147, 86, 220,0.9), rgba(255, 121, 218, 0.9));
+    transition: transform 150ms;
+    margin-top: 1rem;
+}
+.explorer button:hover {
+   transform: scale(1.02); 
+   opacity: 0.9;
 }
