--- a/style.css
+++ b/style.css
@@ -1,59 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 body {
-    margin: 0px;
-    font-family: "roboto",sans-serif;
+  margin: 0px;
+  font-family: "roboto", sans-serif;
 }
+
 header {
- font-family: 'Shrikhand', cursive;
- text-align: center;
- box-shadow: 0px 3px 3px 1px rgb(199, 198, 198);
- padding: 0.5rem;
- position: relative;
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
+  padding: 0.5rem;
+  position: relative;
 }
-main .ville  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.4rem;
-   background-color: #f3f3f3; 
-   text-align: center;
-   padding: 0.5rem;
+
+main .ville {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.4rem;
+  background-color: #f3f3f3;
+  text-align: center;
+  padding: 0.5rem;
 }
+
 main .ville i {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
+
 /*EXPLORER NOS RESTAURANTS*/
 .explorer {
-text-align: center;
+  text-align: center;
 }
-.explorer h2 {
-    margin-top: 2rem;
-    font-size: 2rem;
-}
-.explorer p {
-    font-size: 1rem;
 
+.explorer h2 {
+  margin-top: 2rem;
+  font-size: 2rem;
 }
+
+.explorer p {
+  font-size: 1rem;
+}
+
 .explorer button {
-    color: white;
-    font-weight: bold;
-    font-size: 1.5rem;  
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    box-shadow: 2px 1px 16px 3px grey;
-    background-image: linear-gradient(to top, rgba(147, 86, 220,0.9), rgba(255, 121, 218, 0.9));
-    transition: transform 150ms;
-    margin-top: 1rem;
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 2px 1px 16px 3px grey;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  transition: transform 150ms;
+  margin-top: 1rem;
 }
+
 .explorer button:hover {
-   transform: scale(1.02); 
-   opacity: 0.9;
+  transform: scale(1.02);
+  opacity: 0.9;
 }
+
+/*# sourceMappingURL=style.css.map */
