--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,5 @@
 @import "./layout/villes.scss";
 @import "./layout/explorer.scss";
 @import "./layout/choix.scss";
+@import "./utils/colors.scss";
+@import "./layout/menus.scss";
