--- a/layout/choix.scss
+++ b/layout/choix.scss
@@ -3,6 +3,7 @@
 
 .choix {
     counter-reset: etapes;
+    margin-bottom: 2rem;
     & ol {
         display:flex;
         gap: 2rem;
@@ -24,8 +25,9 @@
           place-items: center;
            border-radius: 50%; 
            position: absolute;
-          bottom: 1rem;
+          bottom: 50%;
           left: -1rem;
+          transform: translateY(50%);
 
         }
         list-style-type: none;
