--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  padding: 0 1rem;
+  padding: 0 7rem;
 }
 
 header {
@@ -45,7 +45,7 @@ header {
   font-size: 2rem;
 }
 .explorer p {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 .explorer button {
   color: white;
@@ -66,12 +66,13 @@ header {
 
 .choix {
   counter-reset: etapes;
+  margin-bottom: 2rem;
 }
 .choix ol {
   display: flex;
   gap: 2rem;
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .choix ol {
     flex-direction: column;
   }
@@ -96,8 +97,9 @@ header {
   place-items: center;
   border-radius: 50%;
   position: absolute;
-  bottom: 1rem;
+  bottom: 50%;
   left: -1rem;
+  transform: translateY(50%);
 }
 .choix li:hover {
   transform: scale(1.02);
@@ -105,7 +107,25 @@ header {
 .choix li i.fas {
   margin-right: 1rem;
   color: #7e7e7e;
-  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.menus {
+  background-color: #f6f6f6;
+}
+.menus h2 {
+  margin-bottom: 2rem;
+}
+.menus .menus__cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.menus .card {
+  border: 1px solid black;
+  height: 4rem;
+  flex-grow: 1;
+  min-width: 30rem;
 }
 
 /*# sourceMappingURL=style.css.map */
