--- a/layout/menus.css
+++ b/layout/menus.css
@@ -1,17 +1,40 @@
 .menus {
   background-color: #f6f6f6;
 }
-.menus h2 {
-  margin-bottom: 2rem;
-}
 .menus .menus__cards {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
   gap: 2rem;
 }
-.menus .card {
-  border: 1px solid black;
-  height: 4rem;
-  flex-grow: 1;
-  min-width: 30rem;
+@media (max-width: 1000px) {
+  .menus .menus__cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.menus .menus__cards .new {
+  border: 1px solid red;
+}
+.menus .menus__cards .new::before {
+  content: "nouveau";
+  position: absolute;
+  height: 2rem;
+  width: 2rem;
+  background-color: colo;
+}
+.menus .card .card__image {
+  border-radius: 1.5rem;
+  height: 15rem;
+  background-size: cover;
+}
+.menus .card__image-1 {
+  background-image: url("../assets/menu-1.jpg");
+}
+.menus .card__image-2 {
+  background-image: url("../assets/menu-2.jpg");
+}
+.menus .card__image-3 {
+  background-image: url("../assets/menu-3.jpg");
+}
+.menus .card__image-4 {
+  background-image: url("../assets/menu-4.jpg");
 }/*# sourceMappingURL=menus.css.map */
