--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -1,17 +1,47 @@
+@import "../utils/variables.scss";
 .menus {
     background-color: #f6f6f6;
-    h2 {
-        margin-bottom: 2rem;
-    }
+  
     .menus__cards {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         gap: 2rem;
+        @media (max-width: $breakpoint) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+        .new {
+            position: relative;
+        }
+        .new::before {
+            content: "Nouveau";
+            position: absolute;
+            height: 2rem;
+            width: 5rem;
+            background-color: $color-tertiary;
+            color: darken($color-tertiary, 50%);
+            display: grid;
+            place-items: center;
+            right: 1rem;
+           top: 1rem;
+           border-radius: 0.1rem;
+         
+            
+        }
     }
     .card {
-        border: 1px solid black;
-        height: 4rem;
-        flex-grow: 1;
-        min-width: 30rem;
+       
+        & .card__image {
+           
+            border-radius: 1.5rem;
+            height: 15rem;
+            background-size: cover;
+        }
+        @for $i from 1 through 4 {
+            &__image-#{$i} { 
+                 background-image: url("../assets/menu-#{$i}.jpg");}
+        }
+        &__image-1 {
+         
+        }
     }
 }
