--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -1,6 +1,8 @@
 @import "../utils/variables.scss";
+@import "../utils/colors.scss";
 .menus {
     background-color: #f6f6f6;
+    margin-bottom: 2rem;
   
     .menus__cards {
         display: grid;
@@ -10,9 +12,11 @@
             grid-template-columns: repeat(1, 1fr);
         }
         .new {
+           
             position: relative;
         }
         .new::before {
+            
             content: "Nouveau";
             position: absolute;
             height: 2rem;
@@ -29,19 +33,37 @@
         }
     }
     .card {
-       
-        & .card__image {
+        &__image {
            
-            border-radius: 1.5rem;
+            border-radius: 1.5rem 1.5rem 0 0;
             height: 15rem;
             background-size: cover;
+            
         }
         @for $i from 1 through 4 {
             &__image-#{$i} { 
-                 background-image: url("../assets/menu-#{$i}.jpg");}
+               
+                 background-image: url("../assets/menu-#{$i}.jpg");
         }
-        &__image-1 {
-         
+    }
+    &__description {
+        position: relative;
+        background-color: white;
+        border-radius: 0 0 1.5rem 1.5rem;
+        
+        h3, p {
+            padding: 0.3rem;
         }
+        i {
+            font-size: 2rem;
+            position: absolute;
+            right: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+            
+        
+
+    }
     }
 }
