--- a/style.css
+++ b/style.css
@@ -14,10 +14,24 @@ body {
 main {
   padding: 0 7rem;
 }
+@media (max-width: 1000px) {
+  main {
+    padding: 0 1rem;
+  }
+}
 
 h2 {
   padding: 2rem 0;
   margin: 0;
+}
+
+h3, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 header {
@@ -116,6 +130,7 @@ header {
 
 .menus {
   background-color: #f6f6f6;
+  margin-bottom: 2rem;
 }
 .menus .menus__cards {
   display: grid;
@@ -143,22 +158,51 @@ header {
   top: 1rem;
   border-radius: 0.1rem;
 }
-.menus .card .card__image {
-  border-radius: 1.5rem;
+.menus .menus__cards .card__image {
+  border-radius: 1.5rem 1.5rem 0 0;
   height: 15rem;
   background-size: cover;
 }
-.menus .card__image-1 {
+.menus .menus__cards .card__image-1 {
   background-image: url("../assets/menu-1.jpg");
 }
-.menus .card__image-2 {
+.menus .menus__cards .card__image-2 {
   background-image: url("../assets/menu-2.jpg");
 }
-.menus .card__image-3 {
+.menus .menus__cards .card__image-3 {
   background-image: url("../assets/menu-3.jpg");
 }
-.menus .card__image-4 {
+.menus .menus__cards .card__image-4 {
   background-image: url("../assets/menu-4.jpg");
+}
+.menus .menus__cards__description {
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1.5rem 1.5rem;
+}
+.menus .menus__cards__description h3, .menus .menus__cards__description p {
+  padding: 0.3rem;
+}
+.menus .menus__cards__description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+footer {
+  background-color: #353535;
+  padding: 1rem 2rem;
+  color: white;
+}
+footer h2 {
+  font-family: "shrikhand", "sans-serif";
+  font-weight: 500;
+  padding: 1rem 0;
+}
+footer p {
+  padding: 0.2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
