--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -1,5 +1,6 @@
 @import "../utils/variables.scss";
 @import "../utils/colors.scss";
+
 .menus {
     background-color: #f6f6f6;
     margin-bottom: 2rem;
@@ -61,8 +62,19 @@
             top: 50%;
             transform: translateY(-50%);
         }
-            
-        
+        .fas {
+            color: transparent;
+            background-image: linear-gradient(red, blue);
+            background-clip: text;
+            -webkit-background-clip: text;
+            opacity: 0;
+            transition: all 200ms ease-in-out;
+            @include gradient(1);
+        }    
+        &:hover .fas {
+            opacity: 1;
+            transform: translateY(-50%) scale(1,2,2);
+        }
 
     }
     }
