--- a/style.css
+++ b/style.css
@@ -158,37 +158,50 @@ header {
   top: 1rem;
   border-radius: 0.1rem;
 }
-.menus .menus__cards .card__image {
+.menus .card__image {
   border-radius: 1.5rem 1.5rem 0 0;
   height: 15rem;
   background-size: cover;
 }
-.menus .menus__cards .card__image-1 {
+.menus .card__image-1 {
   background-image: url("../assets/menu-1.jpg");
 }
-.menus .menus__cards .card__image-2 {
+.menus .card__image-2 {
   background-image: url("../assets/menu-2.jpg");
 }
-.menus .menus__cards .card__image-3 {
+.menus .card__image-3 {
   background-image: url("../assets/menu-3.jpg");
 }
-.menus .menus__cards .card__image-4 {
+.menus .card__image-4 {
   background-image: url("../assets/menu-4.jpg");
 }
-.menus .menus__cards__description {
+.menus .card__description {
   position: relative;
   background-color: white;
   border-radius: 0 0 1.5rem 1.5rem;
 }
-.menus .menus__cards__description h3, .menus .menus__cards__description p {
+.menus .card__description h3, .menus .card__description p {
   padding: 0.3rem;
 }
-.menus .menus__cards__description i {
+.menus .card__description i {
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
+}
+.menus .card__description .fas {
+  color: transparent;
+  background-image: linear-gradient(red, blue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms ease-in-out;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+}
+.menus .card__description:hover .fas {
+  opacity: 1;
+  transform: translateY(-50%) scale(1, 2, 2);
 }
 
 footer {
