--- a/base.css
+++ b/base.css
@@ -3,17 +3,19 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   margin: 0px;
-  font-family: "roboto", sans-serif;
+  font-family: "roboto",sans-serif;
 }
 
 main {
   padding: 0 7rem;
 }
+
 @media (max-width: 1000px) {
   main {
     padding: 0 1rem;
@@ -32,4 +34,5 @@ h3, p {
 a {
   text-decoration: none;
   color: inherit;
-}/*# sourceMappingURL=base.css.map */
+}
+/*# sourceMappingURL=base.css.map */
