--- a/layout/menus.css
+++ b/layout/menus.css
@@ -2,19 +2,26 @@
   background-color: #f6f6f6;
   margin-bottom: 2rem;
 }
+
 .menus .menus__cards {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
   gap: 2rem;
 }
+
 @media (max-width: 1000px) {
   .menus .menus__cards {
-    grid-template-columns: repeat(1, 1fr);
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
   }
 }
+
 .menus .menus__cards .new {
   position: relative;
 }
+
 .menus .menus__cards .new::before {
   content: "Nouveau";
   position: absolute;
@@ -22,54 +29,73 @@
   width: 5rem;
   background-color: #99e2d0;
   color: #1b6150;
+  display: -ms-grid;
   display: grid;
   place-items: center;
   right: 1rem;
   top: 1rem;
   border-radius: 0.1rem;
 }
+
 .menus .card__image {
   border-radius: 1.5rem 1.5rem 0 0;
-  height: 15rem;
+  height: 10rem;
   background-size: cover;
 }
+
 .menus .card__image-1 {
   background-image: url("../assets/menu-1.jpg");
 }
+
 .menus .card__image-2 {
   background-image: url("../assets/menu-2.jpg");
 }
+
 .menus .card__image-3 {
   background-image: url("../assets/menu-3.jpg");
 }
+
 .menus .card__image-4 {
   background-image: url("../assets/menu-4.jpg");
 }
+
 .menus .card__description {
   position: relative;
   background-color: white;
+  height: 4.5rem;
   border-radius: 0 0 1.5rem 1.5rem;
+  padding-bottom: 5rem;
 }
+
 .menus .card__description h3, .menus .card__description p {
   padding: 0.3rem;
 }
+
 .menus .card__description i {
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
+
 .menus .card__description .fas {
   color: transparent;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
   background-image: linear-gradient(red, blue);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
+  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
   background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
+
 .menus .card__description:hover .fas {
   opacity: 1;
-  transform: translateY(-50%) scale(1, 2, 2);
-}/*# sourceMappingURL=menus.css.map */
+  -webkit-transform: translateY(-50%) scale(1, 2, 2);
+          transform: translateY(-50%) scale(1, 2, 2);
+}
+/*# sourceMappingURL=menus.css.map */
