--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -37,7 +37,7 @@
         &__image {
            
             border-radius: 1.5rem 1.5rem 0 0;
-            height: 15rem;
+            height: 10rem;
             background-size: cover;
             
         }
@@ -50,7 +50,10 @@
     &__description {
         position: relative;
         background-color: white;
+        height: 4.5rem;
         border-radius: 0 0 1.5rem 1.5rem;
+        padding-bottom: 5rem;
+  
         
         h3, p {
             padding: 0.3rem;
