--- a/layout/explorer.scss
+++ b/layout/explorer.scss
@@ -1,6 +1,6 @@
 /*EXPLORER NOS RESTAURANTS*/
 
-@import"../utils/box-shadows.scss";
+@import"../utils/mixins.scss";
 @import "../utils/colors.scss";
 .explorer {
     text-align: center;
