--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -50,33 +50,26 @@
     &__description {
         position: relative;
         background-color: white;
-        height: 4.5rem;
-        border-radius: 0 0 1.5rem 1.5rem;
-        padding-bottom: 5rem;
-  
-        
+        border-radius: 0 0 1rem 1rem;
+        &::before {
+            @include heart;
+           
+        }
+   
+        &::after {
+           @include heart;
+            @include gradient(1);
+            opacity: 0;
+            color: transparent;
+            font-weight: 900;
+        }
+        &:hover::after {
+            opacity: 1;
+            transform: translateY(-50%) scale(1.1);
+        }
+          
         h3, p {
             padding: 0.3rem;
-        }
-        i {
-            font-size: 2rem;
-            position: absolute;
-            right: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        .fas {
-            color: transparent;
-            background-image: linear-gradient(red, blue);
-            background-clip: text;
-            -webkit-background-clip: text;
-            opacity: 0;
-            transition: all 200ms ease-in-out;
-            @include gradient(1);
-        }    
-        &:hover .fas {
-            opacity: 1;
-            transform: translateY(-50%) scale(1,2,2);
         }
 
     }
