--- a/style.css
+++ b/style.css
@@ -229,41 +229,68 @@ header {
 .menus .card__description {
   position: relative;
   background-color: white;
-  height: 4.5rem;
-  border-radius: 0 0 1.5rem 1.5rem;
-  padding-bottom: 5rem;
+  border-radius: 0 0 1rem 1rem;
 }
 
-.menus .card__description h3, .menus .card__description p {
-  padding: 0.3rem;
-}
-
-.menus .card__description i {
+.menus .card__description::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 400;
+  content: "\f004";
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-}
-
-.menus .card__description .fas {
-  color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
-  background-image: linear-gradient(red, blue);
+  color: inherit;
   background-clip: text;
   -webkit-background-clip: text;
-  opacity: 0;
+  opacity: 1;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
+.menus .card__description::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: inherit;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
   -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
   background-image: linear-gradient(to top, #9356dc, #ff79da);
+  opacity: 0;
+  color: transparent;
+  font-weight: 900;
 }
 
-.menus .card__description:hover .fas {
+.menus .card__description:hover::after {
   opacity: 1;
-  -webkit-transform: translateY(-50%) scale(1, 2, 2);
-          transform: translateY(-50%) scale(1, 2, 2);
+  -webkit-transform: translateY(-50%) scale(1.1);
+          transform: translateY(-50%) scale(1.1);
+}
+
+.menus .card__description h3, .menus .card__description p {
+  padding: 0.3rem;
 }
 
 footer {
