--- a/base.css
+++ b/base.css
@@ -3,36 +3,29 @@
 *,
 ::before,
 ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0px;
-  font-family: "roboto",sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
 main {
   padding: 0 7rem;
 }
-
 @media (max-width: 1000px) {
   main {
     padding: 0 1rem;
   }
 }
 
-h2 {
-  padding: 2rem 0;
-  margin: 0;
-}
-
-h3, p {
+p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
   margin: 0;
 }
 
 a {
   text-decoration: none;
   color: inherit;
-}
-/*# sourceMappingURL=base.css.map */
+}/*# sourceMappingURL=base.css.map */
