--- a/base.scss
+++ b/base.scss
@@ -16,13 +16,11 @@ main {
       padding: 0 1rem; 
     }
 }
-h2 {
-    padding: 2rem 0;
+p, h1, h2, h3, h4, h5, h6 {
+    padding: 0;
     margin: 0;
 }
-h3, p {
-    margin: 0;
-}
+
 a {
     text-decoration: none;
     color: inherit;
