--- a/layout/choix.css
+++ b/layout/choix.css
@@ -2,36 +2,24 @@
   counter-reset: etapes;
   margin-bottom: 2rem;
 }
-
 .choix ol {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
-
 @media (max-width: 1000px) {
   .choix ol {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .choix li {
   position: relative;
   list-style-type: none;
   background-color: #f6f6f6;
   padding: 1.5rem 2rem;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   border-radius: 1rem;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
 }
-
 .choix li::before {
   content: "" counter(etapes);
   counter-increment: etapes;
@@ -39,25 +27,19 @@
   background-color: #9356dc;
   width: 2rem;
   height: 2rem;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   border-radius: 50%;
   position: absolute;
   bottom: 50%;
   left: -1rem;
-  -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
-
 .choix li:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
 }
-
 .choix li i.fas {
   margin-right: 1rem;
   color: #7e7e7e;
   font-size: 1.5rem;
-}
-/*# sourceMappingURL=choix.css.map */
+}/*# sourceMappingURL=choix.css.map */
