--- a/layout/explorer.css
+++ b/layout/explorer.css
@@ -2,15 +2,12 @@
 .explorer {
   text-align: center;
 }
-
 .explorer h2 {
   font-size: 2rem;
 }
-
 .explorer p {
   font-size: 1.5rem;
 }
-
 .explorer button {
   color: white;
   font-weight: bold;
@@ -18,20 +15,12 @@
   padding: 1rem 2rem;
   border: none;
   border-radius: 2rem;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(147, 86, 220, 0.9)), to(rgba(255, 121, 218, 0.9)));
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
   background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  -webkit-transition: -webkit-transform 150ms;
-  transition: -webkit-transform 150ms;
   transition: transform 150ms;
-  transition: transform 150ms, -webkit-transform 150ms;
   margin-top: 1rem;
 }
-
 .explorer button:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
   opacity: 0.9;
-}
-/*# sourceMappingURL=explorer.css.map */
+}/*# sourceMappingURL=explorer.css.map */
