--- a/layout/header.css
+++ b/layout/header.css
@@ -1,9 +1,7 @@
 header {
-  font-family: 'Shrikhand', cursive;
+  font-family: "Shrikhand", cursive;
   text-align: center;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
   padding: 0.5rem;
   position: relative;
-}
-/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=header.css.map */
