--- a/layout/menus.scss
+++ b/layout/menus.scss
@@ -1,5 +1,7 @@
 @import "../utils/variables.scss";
 @import "../utils/colors.scss";
+#homepage {
+
 
 .menus {
     background-color: #f6f6f6;
@@ -74,4 +76,5 @@
 
     }
     }
+}
 }
