--- a/pages/pages.scss
+++ b/pages/pages.scss
@@ -1,9 +1,10 @@
-img {
-    max-width: 100%;
-}
-main h2{
-    font-family: "Shrikhand", "sans-serif";
-}
+@import "../utils/variables.scss";
+@import "../utils/colors.scss";
+@import "../utils/mixins.scss";
+
+
+
+
 header {
     i {
         font-size: 2rem;
@@ -26,3 +27,107 @@ header {
         transform: translateY(-50%) scale(1,2,2);
     }
 }
+
+body {
+    background-color: $lightergrey;
+}
+
+#page-resto {
+.banniere img {
+    display: block;
+    max-width: 100%;
+    height: 70vh;
+    object-fit: cover;
+    object-position: center bottom;
+}
+.resto__title {
+ margin-top: -2rem;
+    h2{
+    font-family: "Shrikhand", "cursive";
+    padding: 2 rem 1rem;
+    position: relative;
+    border-radius: 2rem 2rem 0 0;
+}
+.resto-main {
+    padding: 0 1rem;  
+   
+    }
+.menu {
+   
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+gap: 1rem;
+
+@media (max-width:$breakpoint) {
+    grid-template-columns: 1fr;
+}
+
+.menu__category {
+  
+overflow: hidden;
+  .menu-item {
+      display: flex;
+    overflow: hidden;
+    border-radius: 1rem;
+  margin: 0.5rem;
+  background-color: white;
+    @include mixins.box-shadow;
+
+      .menu-item__prix {
+margin-left: auto;
+font-weight: 900;
+padding: 1rem;
+display: flex;
+align-items: flex-end;
+
+      }
+      .menu-item__description {
+        padding: 1rem;
+        overflow: hidden;
+        h4, p {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+      }
+      .menu-item__check {
+          display: grid;
+          place-items: center;
+          flex-shrink: 0;
+          $button-width: 4rem;
+          border-radius: 0 1rem 1rem 0;
+          background-color: $color-tertiary;
+          margin-right: -1 * $button-width;
+          width: $button-width;
+          transition: margin-right 0.5s;
+      }
+      i {
+          display: grid;
+          place-items: center;
+          background: white;
+          aspect-ratio: 1;
+          width: 2rem;
+          border-radius: 1rem;
+          color: $color-tertiary;
+
+      }
+      &:hover {
+          .menu-item__check {
+          margin-right: 0;
+      }
+      i {
+          @include animation.quarterspin;
+         animation: quarterspin 0.5s ease-in-out; 
+      }
+    }
+    
+  }
+}
+
+
+}
+}
+}
+
+
+
