--- a/style.css
+++ b/style.css
@@ -1,33 +1,28 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
 *,
 ::before,
 ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0px;
-  font-family: "roboto",sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
 main {
   padding: 0 7rem;
 }
-
 @media (max-width: 1000px) {
   main {
     padding: 0 1rem;
   }
 }
 
-h2 {
-  padding: 2rem 0;
-  margin: 0;
-}
-
-h3, p {
+p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
   margin: 0;
 }
 
@@ -37,30 +32,22 @@ a {
 }
 
 header {
-  font-family: 'Shrikhand', cursive;
+  font-family: "Shrikhand", cursive;
   text-align: center;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
   padding: 0.5rem;
   position: relative;
 }
 
 .ville {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   gap: 1.4rem;
   background-color: #f6f6f6;
   text-align: center;
   padding: 0.5rem;
 }
-
 .ville i {
   font-size: 1.5rem;
 }
@@ -69,15 +56,12 @@ header {
 .explorer {
   text-align: center;
 }
-
 .explorer h2 {
   font-size: 2rem;
 }
-
 .explorer p {
   font-size: 1.5rem;
 }
-
 .explorer button {
   color: white;
   font-weight: bold;
@@ -85,20 +69,13 @@ header {
   padding: 1rem 2rem;
   border: none;
   border-radius: 2rem;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(147, 86, 220, 0.9)), to(rgba(255, 121, 218, 0.9)));
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
   background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  -webkit-transition: -webkit-transform 150ms;
-  transition: -webkit-transform 150ms;
   transition: transform 150ms;
-  transition: transform 150ms, -webkit-transform 150ms;
   margin-top: 1rem;
 }
-
 .explorer button:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
   opacity: 0.9;
 }
 
@@ -106,36 +83,24 @@ header {
   counter-reset: etapes;
   margin-bottom: 2rem;
 }
-
 .choix ol {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
-
 @media (max-width: 1000px) {
   .choix ol {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .choix li {
   position: relative;
   list-style-type: none;
   background-color: #f6f6f6;
   padding: 1.5rem 2rem;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   border-radius: 1rem;
-  -webkit-box-shadow: 0px 3px 3px 1px #c7c6c6;
-          box-shadow: 0px 3px 3px 1px #c7c6c6;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
 }
-
 .choix li::before {
   content: "" counter(etapes);
   counter-increment: etapes;
@@ -143,96 +108,76 @@ header {
   background-color: #9356dc;
   width: 2rem;
   height: 2rem;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   border-radius: 50%;
   position: absolute;
   bottom: 50%;
   left: -1rem;
-  -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
-
 .choix li:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
 }
-
 .choix li i.fas {
   margin-right: 1rem;
   color: #7e7e7e;
   font-size: 1.5rem;
 }
 
-.menus {
+#homepage .menus {
   background-color: #f6f6f6;
   margin-bottom: 2rem;
 }
-
-.menus .menus__cards {
-  display: -ms-grid;
+#homepage .menus .menus__cards {
   display: grid;
-  -ms-grid-columns: (1fr)[1];
-      grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 2rem;
 }
-
 @media (max-width: 1000px) {
-  .menus .menus__cards {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+  #homepage .menus .menus__cards {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
-
-.menus .menus__cards .new {
+#homepage .menus .menus__cards .new {
   position: relative;
 }
-
-.menus .menus__cards .new::before {
+#homepage .menus .menus__cards .new::before {
   content: "Nouveau";
   position: absolute;
   height: 2rem;
   width: 5rem;
   background-color: #99e2d0;
   color: #1b6150;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   right: 1rem;
   top: 1rem;
   border-radius: 0.1rem;
 }
-
-.menus .card__image {
+#homepage .menus .card__image {
   border-radius: 1.5rem 1.5rem 0 0;
   height: 10rem;
   background-size: cover;
 }
-
-.menus .card__image-1 {
+#homepage .menus .card__image-1 {
   background-image: url("../assets/menu-1.jpg");
 }
-
-.menus .card__image-2 {
+#homepage .menus .card__image-2 {
   background-image: url("../assets/menu-2.jpg");
 }
-
-.menus .card__image-3 {
+#homepage .menus .card__image-3 {
   background-image: url("../assets/menu-3.jpg");
 }
-
-.menus .card__image-4 {
+#homepage .menus .card__image-4 {
   background-image: url("../assets/menu-4.jpg");
 }
-
-.menus .card__description {
+#homepage .menus .card__description {
   position: relative;
   background-color: white;
   border-radius: 0 0 1rem 1rem;
 }
-
-.menus .card__description::before {
+#homepage .menus .card__description::before {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -240,22 +185,19 @@ header {
   -webkit-font-smoothing: antialiased;
   font-family: "Font Awesome 5 free";
   font-weight: 400;
-  content: "\f004";
+  content: "";
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   color: inherit;
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 1;
-  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
 }
-
-.menus .card__description::after {
+#homepage .menus .card__description::after {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
@@ -263,33 +205,27 @@ header {
   -webkit-font-smoothing: antialiased;
   font-family: "Font Awesome 5 free";
   font-weight: 400;
-  content: "\f004";
+  content: "";
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   color: inherit;
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 1;
-  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
   background-image: linear-gradient(to top, #9356dc, #ff79da);
   opacity: 0;
   color: transparent;
   font-weight: 900;
 }
-
-.menus .card__description:hover::after {
+#homepage .menus .card__description:hover::after {
   opacity: 1;
-  -webkit-transform: translateY(-50%) scale(1.1);
-          transform: translateY(-50%) scale(1.1);
+  transform: translateY(-50%) scale(1.1);
 }
-
-.menus .card__description h3, .menus .card__description p {
+#homepage .menus .card__description h3, #homepage .menus .card__description p {
   padding: 0.3rem;
 }
 
@@ -298,24 +234,14 @@ footer {
   padding: 1rem 2rem;
   color: white;
 }
-
 footer h2 {
   font-family: "shrikhand", "sans-serif";
   font-weight: 500;
   padding: 1rem 0;
 }
-
 footer p {
   padding: 0.2rem;
   gap: 2rem;
-}
-
-img {
-  max-width: 100%;
-}
-
-main h2 {
-  font-family: "Shrikhand", "sans-serif";
 }
 
 header i {
@@ -323,26 +249,92 @@ header i {
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-
 header .fas {
   color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
   background-image: linear-gradient(red, blue);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
   background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
-
 header:hover .fas {
   opacity: 1;
-  -webkit-transform: translateY(-50%) scale(1, 2, 2);
-          transform: translateY(-50%) scale(1, 2, 2);
+  transform: translateY(-50%) scale(1, 2, 2);
 }
-/*# sourceMappingURL=style.css.map */
+
+body {
+  background-color: #f6f6f6;
+}
+
+#page-resto .banniere img {
+  display: block;
+  max-width: 100%;
+  height: 70vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center bottom;
+     object-position: center bottom;
+}
+#page-resto .resto__title {
+  margin-top: -2rem;
+}
+#page-resto .resto__title h2 {
+  font-family: "Shrikhand", "cursive";
+  padding: 2 rem 1rem;
+  position: relative;
+  border-radius: 2rem 2rem 0 0;
+}
+#page-resto .resto__title .resto-main {
+  padding: 0 1rem;
+}
+#page-resto .resto__title .menu {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+@media (max-width: 1000px) {
+  #page-resto .resto__title .menu {
+    grid-template-columns: 1fr;
+  }
+}
+#page-resto .resto__title .menu .menu__category {
+  background-color: white;
+  border-radius: 1rem;
+}
+#page-resto .resto__title .menu .menu__category .menu-item {
+  display: flex;
+  overflow: hidden;
+}
+#page-resto .resto__title .menu .menu__category .menu-item .menu-item__prix {
+  margin-left: auto;
+  font-weight: 900;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-end;
+}
+#page-resto .resto__title .menu .menu__category .menu-item .menu-item__description {
+  padding: 1rem;
+}
+#page-resto .resto__title .menu .menu__category .menu-item .menu-item__check {
+  display: grid;
+  place-items: center;
+  border-radius: 0 1rem 1rem 0;
+  background-color: #99e2d0;
+  margin-right: -4rem;
+  width: 4rem;
+  transition: margin-right 0.5s;
+}
+#page-resto .resto__title .menu .menu__category .menu-item i {
+  display: grid;
+  place-items: center;
+  background: white;
+  aspect-ratio: 1;
+  width: 2rem;
+  border-radius: 1rem;
+}
+#page-resto .resto__title .menu .menu__category .menu-item:hover #page-resto .resto__title .menu .menu__category .menu-item.menu-item__check {
+  margin-right: 0;
+}/*# sourceMappingURL=style.css.map */
