--- a/utils/mixins.scss
+++ b/utils/mixins.scss
@@ -27,3 +27,14 @@
         opacity: 1;
         transition: all 200ms ease-in-out;   
 }
+
+@mixin quarterspin {
+    @keyframes quarterspin {
+       0% {
+           transform: rotate (-270deg);;
+       }
+       100% {
+          transform: rotate(0);
+       }
+   }   
+   }
