--- a/layout/footer.css
+++ b/layout/footer.css
@@ -3,12 +3,15 @@ footer {
   padding: 1rem 2rem;
   color: white;
 }
+
 footer h2 {
   font-family: "shrikhand", "sans-serif";
   font-weight: 500;
   padding: 1rem 0;
 }
+
 footer p {
   padding: 0.2rem;
   gap: 2rem;
-}/*# sourceMappingURL=footer.css.map */
+}
+/*# sourceMappingURL=footer.css.map */
