--- a/style_REMOTE_271.css
+++ b/style_REMOTE_271.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: "roboto"; 
-    src: url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+    src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
 
 }
 body {
@@ -13,8 +13,7 @@ body {
     margin: 0;
 }
 h2 {
-    font-family: 'roboto', Shrikhand;
-    
+    font-family: "Shrikhand";
 }
 .grosTitre {
     padding-top: 1rem;
@@ -72,7 +71,7 @@ h2 {
     font-weight: normal;
     align-items: center;
     width: 70%;
-    margin: 1.6rem;
+    margin: 2.5rem;
     display: flex;
     justify-content: space-around;
     margin-bottom: 2rem;
@@ -125,9 +124,11 @@ margin-left: -55px;
 }
 .card {
     width: 40%;
-   
-    border-radius: 0px 0px 20px 20px; 
-   
+    
+    border-radius: 0px 0px 20px 20px;
+}
+.card:hover {
+    box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
 }
 
 .card > a {
@@ -135,7 +136,6 @@ margin-left: -55px;
     height: 100%;
     display: block;
     text-decoration: none;
-    
   
 
 }
@@ -147,7 +147,6 @@ margin-left: -55px;
     margin-left: 1.6rem;
     width: 20rem;
     border-radius: 20px 20px 0px 0px;
-    box-shadow: 2px 2px 10px 0px rgba(252, 188, 188, 0.5);
 }
 
 .card__description {
@@ -155,6 +154,7 @@ margin-left: -55px;
     height: 30%;
     display: flex;
     flex-direction: column;
+   align-items: flex-start;
    width: 20rem;
    margin-left: 1.6rem;
 margin-top: -5px;
@@ -163,19 +163,8 @@ margin-bottom: 3rem;
     line-height: 0%;
     color: #000000;
     background-color: white;
-    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
-.coeur > .far
-.coeur:hover > .far {
-  display: none;
-}
-.coeur:hover > .fas {
-  display: inherit;
-}
-h3, p {
-    margin-left: 0px;
-}
 
 .img2 {
     width: 90%;
@@ -192,7 +181,6 @@ h3, p {
    padding-bottom: 2em;
    padding-top: 1rem;
 padding-left: 2rem;
-line-height: 0px;
     background-color: #363535;
     color: white;
 }
